# metaprompt

./: CodeGen.ipynb  README.md  pyproject.toml
StoryGen/: StorygenTesting.ipynb  StorygenV2.ipynb  storygen.ipynb  storygen_with_chroma.ipynb
StoryGen/.ipynb_checkpoints/: StorygenTesting-checkpoint.ipynb  Untitled-checkpoint.ipynb  storygen_with_chroma-checkpoint.ipynb
notebooks/: CodeGen.ipynb
notebooks/.ipynb_checkpoints/: Code Metaprompt-checkpoint.ipynb
